; ModuleID = '/home/carl/AnghaBench/mpv/options/extr_m_option.c_str_get.c'
source_filename = "/home/carl/AnghaBench/mpv/options/extr_m_option.c_str_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mpv_node = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@MPV_FORMAT_STRING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, %struct.mpv_node*, i8*)* @str_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @str_get(i32* %0, i8* %1, %struct.mpv_node* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.mpv_node*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.mpv_node* %2, %struct.mpv_node** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i32, i32* @MPV_FORMAT_STRING, align 4
  %10 = load %struct.mpv_node*, %struct.mpv_node** %7, align 8
  %11 = getelementptr inbounds %struct.mpv_node, %struct.mpv_node* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = call i8* @VAL(i8* %13)
  %15 = icmp ne i8* %14, null
  br i1 %15, label %16, label %19

16:                                               ; preds = %4
  %17 = load i8*, i8** %8, align 8
  %18 = call i8* @VAL(i8* %17)
  br label %20

19:                                               ; preds = %4
  br label %20

20:                                               ; preds = %19, %16
  %21 = phi i8* [ %18, %16 ], [ getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), %19 ]
  %22 = call i32 @talloc_strdup(i8* %12, i8* %21)
  %23 = load %struct.mpv_node*, %struct.mpv_node** %7, align 8
  %24 = getelementptr inbounds %struct.mpv_node, %struct.mpv_node* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  store i32 %22, i32* %25, align 4
  ret i32 1
}

declare dso_local i32 @talloc_strdup(i8*, i8*) #1

declare dso_local i8* @VAL(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
